# opera-rtc-s1-browse

./: CHANGELOG.md  cloudformation.yml  environment.yml  pyproject.toml  requirements-static.txt  requirements.txt
.github/actions/deploy/: action.yml
.github/workflows/: create-jira-issue.yml  deploy-prod.yml  deploy-uat.yml  release-checklist-comment.yml  release.yml  static-analysis.yml  tag-version.yml  test-and-build.yml
src/opera_rtc_s1_browse/: create_browse.py  harmony_service.py
tests/: test_create_browse.py  test_harmony_service.py
