[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "opera_rtc_s1_browse"
requires-python = ">=3.11,<3.12"
authors = [
    {name="tools-bot", email="UAF-asf-apd@alaska.edu"},
]
description = "A tool for create OPERA RTC S1 browse images"
license = {text = "BSD-3-Clause"}
classifiers=[
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dynamic = ["version", "readme", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "opera-rtc-s1-browse"
Documentation = "https://github.com/asfhyp3/opera-rtc-s1-browse#opera-rtc-s1-browse"

[project.scripts]
create_browse = "opera_rtc_s1_browse.create_browse:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
script_launch_mode = "subprocess"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint]
extend-select = [
    "I",   # isort: https://docs.astral.sh/ruff/rules/#isort-i
    "UP",  # pyupgrade: https://docs.astral.sh/ruff/rules/#pyupgrade-up

    # TODO: uncomment the following extensions and address their warnings:
    #"D",   # pydocstyle: https://docs.astral.sh/ruff/rules/#pydocstyle-d
    #"ANN", # annotations: https://docs.astral.sh/ruff/rules/#flake8-annotations-ann

    "PTH", # use-pathlib-pth: https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
check_untyped_defs = true
install_types = true
non_interactive = true
pretty = true
disable_error_code = ["import-untyped"]
